--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"><title>Preguntas</title>
+    <meta charset="utf-8"><title>Autores</title>
     <link rel='stylesheet' type='text/css' href='/stylesheets/style.css'/>
     <link rel='stylesheet' type='text/css' media='only screen and (min-width: 530px) and (min-device-width: 481px)' href='/stylesheets/wide.css'/>
     <link rel='stylesheet' type='text/css' media='only screen and (max-width: 480px)' href='/stylesheets/smartphone.css'/>
@@ -9,7 +9,7 @@
   <body>
     <div id="page-wrap">
       <header class="main" id="h1">
-        <h2>Quiz<span>: el juego de las preguntas</span></h2>
+        <h2>Autor<span>: Daniel Montesano</span></h2>
       </header>
 
       <nav class="main" id="n1" role="navigation">
@@ -17,12 +17,16 @@
         <span><a href="/author">Autores</a></span>
         <span><a href="/quizes/question">Preguntas</a></span>
       </nav>
-
-      <section class="main" id="s1">
-        <%- body %>
-      </section>
+      <div id="presentacion">
+      Este soy yo:
+        <div id="me"><img src="/public/images/me.jpg" id="me">
+        </div>
+        <iframe width="450" height="253" src="https://www.youtube.com/embed/ARpaAqI3y3c?rel=0" frameborder="0" allowfullscreen></iframe>
+      </div>
       <footer class="main" id="f1">
-        <a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
+        Daniel Montesano
+      <br>
+      Correo: <a href="mailto:daniel.montesano.martinez@alumnos.upm.es">daniel.montesano.martinez@alumnos.upm.es</a>
       </footer>
     </div>
   </body>
