--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,33 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8"><title>Autores</title>
-    <link rel='stylesheet' type='text/css' href='/stylesheets/style.css'/>
-    <link rel='stylesheet' type='text/css' media='only screen and (min-width: 530px) and (min-device-width: 481px)' href='/stylesheets/wide.css'/>
-    <link rel='stylesheet' type='text/css' media='only screen and (max-width: 480px)' href='/stylesheets/smartphone.css'/>
-  </head>
-  <body>
-    <div id="page-wrap">
-      <header class="main" id="h1">
-        <h2>Autor<span>: Daniel Montesano</span></h2>
-      </header>
-
-      <nav class="main" id="n1" role="navigation">
-        <span><a href="/">Inicio</a></span>
-        <span><a href="/author">Autores</a></span>
-        <span><a href="/quizes/question">Preguntas</a></span>
-      </nav>
       <div id="presentacion">
       Este soy yo:
-        <div id="me"><img src="/public/images/me.jpg" id="me">
+        <div id="me"><img src="/images/me.jpg" id="me" width="300">
         </div>
-        <iframe width="450" height="253" src="https://www.youtube.com/embed/ARpaAqI3y3c?rel=0" frameborder="0" allowfullscreen></iframe>
+        <iframe width="400" height="240" src="https://www.youtube.com/embed/ARpaAqI3y3c?rel=0" frameborder="0" allowfullscreen></iframe>
       </div>
-      <footer class="main" id="f1">
-        Daniel Montesano
-      <br>
-      Correo: <a href="mailto:daniel.montesano.martinez@alumnos.upm.es">daniel.montesano.martinez@alumnos.upm.es</a>
-      </footer>
-    </div>
-  </body>
-</html>
