--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,2 @@
 <h3>Bienvenido a <%= title %></h3>
-EL portal donde podra crear sus propios juegos.
+El portal donde podra crear sus propios juegos.
