--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,6 +23,10 @@
       </section>
       <footer class="main" id="f1">
         <a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
+        Daniel Montesano
+        <br>
+        Correo: <a href="mailto:daniel.montesano.martinez@alumnos.upm.es">daniel.montesano.martinez@alumnos.upm.es</a>
+        GitHub: <a href="https://github.com/danielmontesano/ProyectoQuiz/tree/Uploaded">Practica QUIZ</a>
       </footer>
     </div>
   </body>
