searching not working

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,10 +25,11 @@
         </div>
       </section>
       <footer class="main" id="f1">
-        <a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
+        <a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a> <br>
         Daniel Montesano
         <br>
         Correo: <a href="mailto:daniel.montesano.martinez@alumnos.upm.es">daniel.montesano.martinez@alumnos.upm.es</a>
+        <br>
         GitHub: <a href="https://github.com/danielmontesano/ProyectoQuiz/tree/Uploaded">Practica QUIZ</a>
       </footer>
     </div>
