--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,5 +1,5 @@
 <form method="get" action="/quizes?search">
-	<input type="text" name="search" value="Busqueda de preguntas"/>
+	<input type="text" name="search" placeholder="Busqueda de preguntas"/>
 	<input type="submit" value="Enviar">
 </form>
 
