--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <form method="get" action="/quizes?search">
 	<input type="text" name="search" placeholder="Busqueda de preguntas"/>
 	<input type="submit" value="Enviar">
@@ -8,3 +9,5 @@
 	<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
 <% } %>
 </table>
+
+<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
