Funcionando comprobacion el añadir preguntas

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,6 +19,16 @@
       </nav>
 
       <section class="main" id="s1">
+        
+        <% if (errors.length) { %>
+          <span id='ErrorMsgs'>
+            Corregir errores: <br/>
+            <% for (var i in errors) { %>
+              <span> <%= errors[i].message %> </span><br/>
+              <% } %>
+            </span>
+            <% } %>
+
         <div> <table>
           <%-body %>
         </table>
