Estadisticas y autologout implementado

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
       <div id="presentacion">
       Este soy yo:
         <div id="me"><img src="/images/me.jpg" id="me" width="300">
