--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -3,5 +3,5 @@
 <input type="text" id="preg" name="quiz[pregunta]" placeholder="<%= quiz.pregunta %>"/> <p>
 <label for="resp" class="rem">Respuesta:</label>
 <input type="text" id="resp" name="quiz[respuesta]" placeholder="<%= quiz.respuesta %>"/> <p>
-<a hrref="/quizes"><button type="button">Cancelar</button></a>
+<a href="/quizes"><button type="button">Cancelar</button></a>
 <input type="submit" value="Salvar">
