--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,7 @@
         <span><a href="/">Inicio</a></span>
         <span><a href="/author">Autores</a></span>
         <span><a href="/quizes">Preguntas</a></span>
+        <span><a href="/statistics">Estadisticas</a></span>
       </nav>
 
       <section class="main" id="s1">
