--- a/views/statistics.ejs
+++ b/views/statistics.ejs
@@ -2,5 +2,5 @@
 Numero de preguntas: <%= question_number %><p>
 Numero de comentarios: <%= comment_number %><p>
 Numero medio de comentarios por pregunta: <%= comment_average %><p>
-Numero de preguntas sin comentarios: <%= commented_questions %><p>
-Numero de preguntas con comentarios: <%= uncommented_questions %><p>
+Numero de preguntas con comentarios: <%= commented_questions %><p>
+Numero de preguntas sin comentarios: <%= uncommented_questions %><p>
