--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -7,12 +7,15 @@
 <table>
 <% var i; for (i=0; i< quizes.length; i++) { %>
 	<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
+	<%if (session.user) {%>
 	<tr><td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td></tr>
 	<td>
 		<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
 			<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">Borrar</button>
 	</form></td>
+	<%}%>
 <% } %>
 </table>
-
-<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+<%if (session.user) {%>
+	<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+<%}%>	
