--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -2,6 +2,6 @@
 Añadir comentario: <p>
 
 <form method="post" action="/quizes/<%= quizid %>/comments/" >
-	<input type"text" id="comment" name="comment[texto]" placeholder="Inserte aqui su comentario"/> <p>
-	<input type="submit" value="Salvar">
+	<input type="text" id="comment" name="comment[texto]" placeholder="Inserte aqui su comentario"/> <p>
+	<button type="submit">Enviar</button>
 </form>
