--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -10,11 +10,11 @@
 <p><strong>Comentarios:</strong></p>
 <%for(index in quiz.Comments){%>
 	<%if(quiz.Comments[index].publicado || session.user){%>
-	<p>- <%=quiz.Comments[index].texto%></p>
-		<%if(session.user && !quiz.Comments[index].publicado){%>
-			<a href="/quizes/<%= quiz.id %>/comments/<%=quiz.Comments[index].ide%>"<button>Publicar</button></a>
-		<%}%>
-	</p>
+		<p>- <%=quiz.Comments[index].texto%></p>
+			<%if(session.user && !quiz.Comments[index].publicado){%>
+				<a href="/quizes/<%= quiz.id %>/comments/<%=quiz.Comments[index].id%>/publish"><button>Publicar</button></a>
+			<%}%>
+		</p>
 	<%}%>
 <%}%>
 
