--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,9 +10,16 @@
     <div id="page-wrap">
       <header class="main" id="h1">
         <%if(!session.user){%>
-          <span class="right"><a href="/login">Login</a></span>
+          <span class="right">
+              <a href="/login">Login</a>
+              <a href="/user">Sign Up</a>
+          </span>
         <%}else{%>
-          <span class="right"> <%=session.user.username%> <a href="/logout">Logout</a></span>
+          <span class="right"> 
+            <%=session.user.username%> 
+            <a href="/user/<%=session.user.id%>/edit">Settings</a>
+            <a href="/logout">Logout</a>
+          </span>
         <%}%>
         <h2>Quiz<span>: el juego de las preguntas</span></h2>
       </header>
