--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -7,13 +7,13 @@
 <table>
 <% var i; for (i=0; i< quizes.length; i++) { %>
 	<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
-	<%if (session.user) {%>
+	<%if (session.user) { if (session.user.isAdmin || session.user.id === quizes[i].UserId){ %>
 	<tr><td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td></tr>
 	<td>
 		<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
 			<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">Borrar</button>
 	</form></td>
-	<%}%>
+	<%}}%>
 <% } %>
 </table>
 <%if (session.user) {%>
