--- a/views/quizes/new.ejs
+++ b/views/quizes/new.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 Añadir pregunta: <p>
 
-<form method="post" action="/quizes/create">
+<form method="post" action="/quizes/create" enctype="multipart/form-data">
 	<% include _form.ejs %>
 </form> 
