--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,6 +28,9 @@
         <span><a href="/">Inicio</a></span>
         <span><a href="/author">Autores</a></span>
         <span><a href="/quizes">Preguntas</a></span>
+        <%if(session.user){%>
+          <span><a href="/user/<%=session.user.id%>/quizes">Mis Preguntas</a></span>
+        <%}%>
         <span><a href="/quizes/statistics">Estadisticas</a></span>
       </nav>
 
