--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,7 @@
         <span><a href="/quizes">Preguntas</a></span>
         <%if(session.user){%>
           <span><a href="/user/<%=session.user.id%>/quizes">Mis Preguntas</a></span>
+          <span><a href="/user/<%=session.user.id%>/favourites">Mis Favoritos</a></span>
         <%}%>
         <span><a href="/quizes/statistics">Estadisticas</a></span>
       </nav>
